# celery-microservice-example

./: .gitignore  README.md  docker-compose.yml
dockerfiles/: email.Dockerfile  user.Dockerfile  web.Dockerfile
email_service/: email_business_logic.py  email_service.py  pyproject.toml
user_service/: pyproject.toml  user_business_logic.py  user_service.py
web_service/: app.js  celery_client.js  email_service_client.js  package.json  registration_business_logic.js  user_service_client.js
