[tool.poetry]
name = "email_service"
version = "0.1.0"
description = ""
authors = ["Bruce Wong <bruce.wong@q.bio>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.2.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
